@@ -1,6 +1,8 @@
 
 HEAD
 ====
+Fixes:
+- xt_pknock: avoid crash when hash TFM could not be allocated
 
 
 v1.33 (2011-02-02)
